# invoices

./: .dockerignore  .env-template  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  docker-compose.yml  fly.toml  tailwind.config.js
migrations/: 20240506051750_create-users-table.down.sql  20240506051750_create-users-table.up.sql  20240506052750_create-customer-table.down.sql  20240506052750_create-customer-table.up.sql  20240506053000_create-invoice-table.down.sql  20240506053000_create-invoice-table.up.sql  20240506053007_create-invoice-item-table.down.sql  20240506053007_create-invoice-item-table.up.sql
src/: app.css  main.rs
src/handlers/: home.rs  mod.rs  user.rs
src/markup/: home.rs  mod.rs  primitives.rs
src/models/: user.rs
static/: app.css  main.js
